# RayTracer

./: CMakeLists.txt
include/: Camera.hpp  Pixel.hpp  Polygon.hpp  Ray.hpp  Rectangle.hpp  Scene.hpp  Sphere.hpp  Triangle.hpp  definitions.hpp
src/: Camera.cpp  Pixel.cpp  Polygon.cpp  Ray.cpp  Rectangle.cpp  Scene.cpp  Sphere.cpp  Triangle.cpp  main.cpp
